--- a/ui/results.reel/results.css
+++ b/ui/results.reel/results.css
@@ -176,10 +176,18 @@
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 /* answers correct */
